10371
I think the overload resolution is as specced.
```scala
scala> trait T { def foo = 0 }; object O extends T { def foo(a: Any) = 0 }; O.foo
<console>:38: error: ambiguous reference to overloaded definition,
both method foo in object O of type (a: Any)Int
and  method foo in trait T of type => Int
match expected type ?
        O.foo
          ^
```

But its at least an API bug.
